# Purr-Sight

./: .gitignore  README.md  README_zh-CN.md  complete_app_ecosystem.md  download_llm.py  google_stitch_prompt.md  install_conda.sh  practical_acceptance_report_20260201_013725.json  purr_sight_screens_list.md  pyproject.toml  pytest.ini  train_phase2_simple.py
config/: cluster_train_config.yaml  phase1_offline.yaml  phase1_online.yaml  phase2_cluster.yaml  phase2_example.yaml  train_config.yaml  validation_config.yaml
data/: audio.m4a
data/phase2/: README.md  train.jsonl  train_extended.jsonl
docs/: AgentReviewPrompt.md  CodeReviewReport.md  LAION_Image_Download.md  PHASE2_LEARNING_RATE_STRATEGY.md
docs/acceptance/: ACCEPTANCE_ISSUES_AND_FIXES.md  ACCEPTANCE_TEST_GUIDE.md  CORE_VALIDATION_SUMMARY.md  FINAL_ACCEPTANCE_REPORT.md  QUICK_START_ACCEPTANCE.md
docs/deployment/: CLUSTER_TRAINING_README.md  INFERENCE_GUIDE.md  JSON_OUTPUT_IMPROVEMENT.md  PHASE2_CHECKPOINT_MLFLOW_MAPPING.md  PHASE2_CLUSTER_TRAINING.md  PHASE2_DEPLOYMENT_GUIDE.md  PHASE2_MONITORING_REFACTOR.md  TESTING_GUIDE.md  TRAIN_PHASE2_README.md  V3_SCHEMA_IMPLEMENTATION.md  VALIDATE_PHASE2_README.md
docs/guides/: PROJECT_STRUCTURE.md  (+1 more)
purrsight/: config.py
results/: inference_image_20260201_051736.json  inference_image_20260201_051855.json  inference_test.json  inference_test_current.json  test_inference_result.json  test_inference_v3_image.json  test_inference_v3_text.json  test_with_prompt.json
scripts/: README_update_preprocessed.md  auto_label_phase2_data.py  cleanup_corrupted_preprocessed.py  create_index_from_preprocessed.py  create_phase2_sample_data.py  generate_more_phase2_data.py  profile_training.py  quick_diagnose.py  reprocess_all.sh  update_index.py  update_preprocessed.py  validate_phase2_data.py
sub/: README.md  cluster_train.sh  run_dataprepare.sh  run_pred.sh  run_train.sh  slurm_phase2_train.sh
train/: inference_module.py  train_runner.py
(+68 files in other folders)
